# epdiy-as-component

./: CMakeLists.txt  sdkconfig
components/ssd1306/: Readme.md
main/: CMakeLists.txt
main/dragon/: sdkconfig
main/dragon-temp/main/: main.c
main/dragon/main/: main.c
main/vcom-kickback/: README.md
main/vcom-kickback-display/: README.md
main/vcom-kickback-display/main/: main.c
main/vcom-kickback/main/: main.c
patch/: epd_board_v7.c
